Support bonus nerfAllPlayers